--- a/Way.EntityDB/Way.EntityDB.csproj
+++ b/Way.EntityDB/Way.EntityDB.csproj
@@ -2,8 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.1.7</Version>
+    <Version>1.0.1.8</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <FileVersion>1.0.1.8</FileVersion>
+    <AssemblyVersion>1.0.1.8</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
