--- a/Way.EntityDB/Way.EntityDB.csproj
+++ b/Way.EntityDB/Way.EntityDB.csproj
@@ -10,6 +10,8 @@
     <Description>Way.EntityDB是一个基于EF Core的数据层框架，它取消了EF Core的Migration机制，取消了数据跟踪机制。
 EntityDB内置建模工具，通过图形化建表，生成Model对象代码，并且它会把表结构的修改过程，全部记录下来，涵盖在Model代码里面，所以，在新的代码运行时，数据库也会自动更新到最新结构。</Description>
     <Authors>Jack</Authors>
+    <PackageLicenseUrl></PackageLicenseUrl>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
