--- a/EJClient/packages.config
+++ b/EJClient/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net46" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net46" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Extensions.Caching.Memory" version="1.1.0" targetFramework="net452" />
@@ -60,6 +61,7 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net46" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net452" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net46" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net452" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading" version="4.3.0" targetFramework="net452" />
@@ -69,5 +71,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
-  <package id="Way.Lib" version="2.0.2.5" targetFramework="net46" />
+  <package id="Way.Lib" version="2.0.4.7" targetFramework="net46" />
 </packages>
