--- a/EJClient/EJClient.csproj
+++ b/EJClient/EJClient.csproj
@@ -229,8 +229,8 @@
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="UIAutomationProvider" />
-    <Reference Include="Way.Lib, Version=2.0.4.7, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Way.Lib.2.0.4.7\lib\net46\Way.Lib.dll</HintPath>
+    <Reference Include="Way.Lib, Version=2.0.5.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Way.Lib.2.0.5.3\lib\net46\Way.Lib.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -582,6 +582,7 @@
     <EmbeddedResource Include="WebForm.resx">
       <DependentUpon>WebForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="certificate" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
