--- a/Way.EntityDB/Way.EntityDB.csproj
+++ b/Way.EntityDB/Way.EntityDB.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>3.1.1.5</Version>
+    <Version>3.1.1.6</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/simpleway2016/EntityDB</PackageProjectUrl>
     <Description>Way.EntityDB是一个基于EF Core的数据层框架，它取消了EF Core的Migration机制，取消了数据跟踪机制。
