--- a/EJClient/EJClient.csproj
+++ b/EJClient/EJClient.csproj
@@ -360,6 +360,7 @@
       <DependentUpon>DBTableEditor.xaml</DependentUpon>
     </Compile>
     <Compile Include="Helper.cs" />
+    <Compile Include="LocalCache.cs" />
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
